CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/DocumentosAlfresco__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lista de documentos que se cargarán en Alfresco, con un identificador por tipo de documentos. Ejemplo: Portabilida u Oportunidad.</description>
    <label>DocumentosAlfresco</label>
</CustomObject>