CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/fields/Escritura__c.field-meta.xml
<CustomField>
    <fullName>Escritura__c</fullName>
    <label>Escritura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>