CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/fields/Lectura__c.field-meta.xml
<CustomField>
    <fullName>Lectura__c</fullName>
    <label>Lectura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>