CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/fields/NombreDocumento__c.field-meta.xml
<CustomField>
    <fullName>NombreDocumento__c</fullName>
    <label>NombreDocumento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>