CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/fields/OrdenListDoc__c.field-meta.xml
<CustomField>
    <fullName>OrdenListDoc__c</fullName>
    <label>OrdenListDoc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>