CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/fields/OrigenDocumento__c.field-meta.xml
<CustomField>
    <fullName>OrigenDocumento__c</fullName>
    <label>OrigenDocumento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>