CNSDEVCOLECT/force-app/main/default/objects/DocumentosAlfresco__c/listViews/allDocumento.listView-meta.xml
<ListView>
    <fullName>allDocumento</fullName>
    <columns>NAME</columns>
    <columns>OrdenListDoc__c</columns>
    <columns>NombreDocumento__c</columns>
    <columns>OrigenDocumento__c</columns>
    <columns>Lectura__c</columns>
    <columns>Escritura__c</columns>
    <filterScope>Everything</filterScope>
    <label>allDocumento</label>
</ListView>